# IllustRay

./: .gitignore  .gitmodules  CMakeLists.txt  Illustray.cpp  README.md
.github/workflows/: macOS.yml
CPU/: CMakeLists.txt  Illustray.cpp  Illustray.h
CPU/Includes/: MathUtils.hpp
CPU/Includes/Geometry/: Geometry.hpp  Sphere.hpp
CPU/Includes/Point/: Point.hpp  PointBase.hpp  PointTypes.hpp
CPU/Includes/Ray/: Ray.hpp  RayBase.hpp  RayTypes.hpp
CPU/Includes/Vector/: Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorBase.hpp  VectorTypes.hpp
CPU/Tests/: CMakeLists.txt  doctest.h
CPU/Tests/Point/: PointBaseTest.cpp
CPU/Tests/Ray/: RayBaseTest.cpp
CPU/Tests/Vector/: VectorBaseTest.cpp
Includes/: Types.hpp  Vector.hpp
Includes/Vector/: Vector.hpp
Tests/: CMakeLists.txt  VectorTest.cpp
Tests/Vector/: VectorTest.cpp
